[REFACTOR] : Move /sql to /automne/sql
[REFACTOR] : Move /html to /automne/html
[REFACTOR] : Use CMS_cache to store Backtraces, Stats and Polymod structures instead of user session
[REFACTOR] : Add default attribute to text and varchar blocks (standard module) to specifie a specific text instead of the default "Lorem Ipsum" text
[REFACTOR] : Update ExtJS to version 3.3.1
[FEATURE] : Add Google coordinates field for Polymod
[FEATURE] : Add vhost subfolder support for Automne installation
[FEATURE] : Add import/export of polymod modules structures
[FEATURE] : Add export of Automne activity logs in CSV
[FEATURE] : Add Google Chrome Frame support (via the configuration constant APPLICATION_GCF_SUPPORT) 
[FEATURE] : Add row duplication
[FEATURE] : Add codename to pages and websites
[FEATURE] : Add database auto update (useful for direct update from Launchpad)
[FEATURE] : Add auto resize and auto crop on images for image and file objects
[FEATURE] : Add email notification to user/group field of objects (like author for example)
[FEATURE] : Add atm-page and atm-website tags

V4.0.2 (25/05/2010)
[BUG] : Corrected bugs : 269, 270, 486, 497 (see http://www.automne.ws/bug/)
[BUG] : Remove ghost groups on templates
[BUG] : Templates do a better check on usage
[BUG] : In administration, handle page links to documents or images which open directly in the current page : force open the link in a new window.
[REFACTOR] : Add draft thumbnail on page status icons
[REFACTOR] : Update phpMyAdmin to version 3.3.1
[REFACTOR] : Update ExtJS to version 3.2.0
[REFACTOR] : Add pages redirection infos in pages tree
[REFACTOR] : Interface for multi poly objects association is completely refactored
[REFACTOR] : Change parameters labels and position on image field
[FEATURE] : Add tabs menu on all tabs panels
[FEATURE] : Add labels and ids variables to object categories when using multi categories